moved the add media button to the formatting toolbar, tweaked the editor layout (still not 100% sure that we can use tinyMCE due to an overflow scroll issue
git-svn-id: https://webos.svn.wordpress.org/trunk@69 ee5cff3a-74c1-40a4-9fec-33ab0844ee87

--- a/compose/css/compose.css
+++ b/compose/css/compose.css
@@ -26,12 +26,10 @@
 /*	background-image: -webkit-linear-gradient(black, white);  */
 	background-color: #E4E4E4;
 	border-color: #DFDFDF;
-	border-radius: 6px;
+	border-radius: 6px 6px 0 0;
 	border-style: solid;
 	border-width: 1px;
-	height: 50px;
-	margin: 2px 10px 10px 10px;
-	padding-bottom: 10px;
+	margin: 2px 10px 1px 10px;
 }
 
 #compose_richTextButtons {
@@ -75,6 +73,24 @@
 	color: #FFFFFF;
 }
 
-#txtEntry_tbl {
-/*height: 500px !important*/
+#compose_uploadButton {
+	-webkit-border-image: none;
+	position: absolute;
+	top: 3px;
+	left: 717px;
+	font-size:8pt;
+	width: 30px;
+	height: 20px;
+	cursor: default;
+	border: 1px solid #f6f6f6;
+	background-image: url(../js/tiny_mce/themes/advanced/skins/webos/img/butt2.png);
+	background-position: left top;
+	background-repeat: repeat-x;
+	-webkit-border-radius: 2px;
+	line-height: 10px;
+}
+
+#compose_uploadButton .enyo-button-down {
+	-webkit-border-image: none;
+	border: 1px solid #686868;
 }
